# pragver-tools

./: .gitignore  .travis.yml  COVERAGE.sh  INSTALL-KCOV.sh  Makefile.am  README.md  configure.ac  installer  package.json  pragver-tools.pc.in
.meta/: TRACKED
docs/: README.md
src/: pragver  pragver-auto.sh  pragver-bump.sh  pragver-extract.sh  pragver-new.sh  pragver-validate.sh
test/: config.txt  config1.txt  config2.txt  config3.txt  config5.txt  config6.txt  extract.txt  extracted.txt  filtered.txt  invalid.txt  mixed.txt  none.txt  test-auto1.sh  test-auto2.sh  test-bump.sh  test-extract.sh  test-new.sh  test-pragver.sh  test-validate.sh  testing.sh  valid.txt
